
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_demo {
	prototype.account_name        owner            =      1;
    prototype.time_point_sec      post_time        =      2;
    string                        title            =      3;
    int64                         like_count       =      4;
    int64                         idx              =      5;
    int64                         replay_count     =      6;
    string                        content          =      7;
    repeated                      string                      taglist          =      8;
      
}


message so_mem_demo_by_owner {
	prototype.account_name     	owner        = 1;
}


message so_mem_demo_by_post_time {
	prototype.time_point_sec   	post_time    = 1;
}


message so_mem_demo_by_title {
	string                     	title        = 1;
}


message so_mem_demo_by_like_count {
	int64                      	like_count   = 1;
}


message so_mem_demo_by_idx {
	int64                      	idx          = 1;
}


message so_mem_demo_by_replay_count {
	int64                      	replay_count = 1;
}


message so_mem_demo_by_content {
	string                     	content      = 1;
}


message so_mem_demo_by_taglist {
	repeated  	string                   	taglist      = 1;
}


message so_list_demo_by_owner {
	prototype.account_name     	owner        = 1;
}


message so_list_demo_by_post_time {
	prototype.time_point_sec   	post_time    = 1;
	prototype.account_name     	owner        = 2;
}


message so_list_demo_by_like_count {
	int64                      	like_count   = 1;
	prototype.account_name     	owner        = 2;
}


message so_list_demo_by_idx {
	int64                      	idx          = 1;
	prototype.account_name     	owner        = 2;
}


message so_list_demo_by_replay_count {
	int64                      	replay_count = 1;
	prototype.account_name     	owner        = 2;
}


message so_list_demo_by_taglist {
	repeated  	string                   	taglist      = 1;
	prototype.account_name     	owner        = 2;
}


message so_unique_demo_by_owner {
	prototype.account_name     	owner        = 1;
}


message so_unique_demo_by_like_count {
	int64                      	like_count   = 1;
	prototype.account_name     	owner        = 2;
}


message so_unique_demo_by_idx {
	int64                      	idx          = 1;
	prototype.account_name     	owner        = 2;
}
